--- a/about.html
+++ b/about.html
@@ -59,10 +59,10 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item ">
-                                 <a class="nav-link" href="index.html">Home</a>
+                                 <a class="nav-link" href="index.html">Inicio</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="about.html">About</a>
+                                 <a class="nav-link" href="about.html">about</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="room.html">Our room</a>
@@ -91,7 +91,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>About Us</h2>
+                     <h2>¿Quiénes somos?</h2>
                   </div>
                </div>
             </div>
@@ -104,14 +104,23 @@
                <div class="col-md-5">
                   <div class="titlepage">
                     
-                     <p class="margin_0">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum. </p>
-                     <a class="read_more" href="Javascript:void(0)"> Read More</a>
+                     <p class="margin_0">El nombre de nuestra empresa “Grand Tour” es la unión de dos palabras que serían pro de profesionales y Tech de tecnología y escogimos estas palabras porque nos consideramos una empresa con personal profesional al momento de crear proyectos así mismo nos gusta la tecnología y estar innovando todo el tiempo.  </p>
+                     <p class="margin_0">Donde exista el sueño de viajar, Grand Tour estará para darte la tranquilidad y la facilidad de realizar tu viaje. Ya sea asesorándote sobre tu viaje con nuestros expertos en nuestro número 800, teniendo atención personalizada en nuestros módulos de ventas ubicados en los principales centros comerciales del estado de Puebla, a través de nuestra sitio web donde podrás realizar tu pago de forma segura, puedes tener la confianza que te brindaremos la mejor experiencia en cada viaje o tour.</p>
+                     
                   </div>
                </div>
                <div class="col-md-7">
                   <div class="about_img">
                      <figure><img src="images/about.png" alt="#"/></figure>
                   </div>
+                  <div class="subtitle mt-4">
+                     <h3>Misión</h3>
+                  </div>
+                  <p class="margin_0">Desarrollar soluciones de Software a niveles competitivos, que permita a nuestros clientes cubrir sus necesidades o facilitarles la realización de algunas labores.</p>
+                  <div class="subtitle mt-4">
+                     <h3>Visión</h3>
+                  </div>
+                  <p class="margin_0">Ser una empresa líder del mercado en soluciones de Software, donde se brinden productos de excelente calidad.</p>  
                </div>
             </div>
          </div>
