--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>keto</title>
+      <title>Grand Tour</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -74,7 +74,7 @@
                                  <a class="nav-link" href="blog.html">Blog</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                                 <a class="nav-link" href="contact.html">Contactanos</a>
                               </li>
                            </ul>
                         </div>
@@ -156,7 +156,7 @@
             <div class="container">
                <div class="row">
                   <div class=" col-md-4">
-                     <h3>Contact US</h3>
+                     <h3>Contactanos</h3>
                      <ul class="conta">
                         <li><i class="fa fa-map-marker" aria-hidden="true"></i> Address</li>
                         <li><i class="fa fa-mobile" aria-hidden="true"></i> +01 1234569540</li>
