--- a/room.html
+++ b/room.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>keto</title>
+      <title>Grand Tour</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -59,22 +59,16 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item ">
-                                 <a class="nav-link" href="index.html">Home</a>
+                                 <a class="nav-link" href="index.html">Inicio</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">About</a>
+                                 <a class="nav-link" href="about.html">Nosotros</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="room.html">Our room</a>
+                                 <a class="nav-link" href="room.html">Ofertas</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="gallery.html">Gallery</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="blog.html">Blog</a>
-                              </li>
-                              <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                                 <a class="nav-link" href="contact.html">Contactanos</a>
                               </li>
                            </ul>
                         </div>
@@ -185,32 +179,27 @@
             <div class="container">
                <div class="row">
                   <div class=" col-md-4">
-                     <h3>Contact US</h3>
+                     <h3>Contactanos</h3>
                      <ul class="conta">
-                        <li><i class="fa fa-map-marker" aria-hidden="true"></i> Address</li>
-                        <li><i class="fa fa-mobile" aria-hidden="true"></i> +01 1234569540</li>
-                        <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="#"> demo@gmail.com</a></li>
+                        <li><i class="fa fa-map-marker" aria-hidden="true"></i>98.2062</li>
+                        <li><i class="fa fa-mobile" aria-hidden="true"></i> +52 22285065056</li>
+                        <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="#"> GrandTour@gmail.com</a></li>
                      </ul>
                   </div>
                   <div class="col-md-4">
-                     <h3>Menu Link</h3>
+                     <h3>Menu</h3>
                      <ul class="link_menu">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="about.html"> about</a></li>
-                        <li class="active"><a href="room.html">Our Room</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="about.html">Nosotros</a></li>
+                        <li><a href="room.html">Ofertas</a></li>
+                        <li class="active"><a href="contact.html">Contactanos</a></li>
                      </ul>
                   </div>
                   <div class="col-md-4">
-                     <h3>News letter</h3>
                      <form class="bottom_form">
-                        <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
-                        <button class="sub_btn">subscribe</button>
                      </form>
                      <ul class="social_icon">
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a target="_black" href="https://www.facebook.com/grandTourOficial/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
@@ -225,7 +214,7 @@
                         <p>
                            © 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a>
                            <br><br>
-                           Distributed by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+                           Distributed by Grand Tour</a>
                            </p>
                      </div>
                   </div>
