--- a/gallery.html
+++ b/gallery.html
@@ -74,7 +74,7 @@
                                  <a class="nav-link" href="blog.html">Blog</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                                 <a class="nav-link" href="contact.html">Contactanos</a>
                               </li>
                            </ul>
                         </div>
