--- a/room.html
+++ b/room.html
@@ -28,6 +28,13 @@
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+      <style>
+         .prueba{
+            text-decoration: line-through !important;
+            color:#fe0000; 
+            font-size:15px;
+         }
+      </style>
    </head>
    <!-- body -->
    <body class="main-layout">
@@ -85,7 +92,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>Our Room</h2>
+                     <h2>Ofertas</h2>
                   </div>
                </div>
             </div>
@@ -96,75 +103,106 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <div class="titlepage">
-                     <p  class="margin_0">Lorem Ipsum available, but the majority have suffered </p>
-                  </div>
                </div>
             </div>
             <div class="row">
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room1.jpg" alt="#"/></figure>
+                        <figure><img src="images/pueblosimg/zacatlandemanzanas.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>Zacatlán de las Manzanas Puebla </h3>
+                        <p>3 días/ 2 noches Slogan: Atraviesa puentes, cascadas y senderos serranos; prueba una taza de su aromático café; adquiere artesanías de papel amate y deléitate con sus licores de frutas. Hotel + Vuelo + Traslado. </p>
+                        <a class="prueba" href="#">MXN $5,500 Por Personas</a>
+                        <br>
+                        <a style="color:blue; font-size:20px;">MXN $2,500 por pesona </a>
+                        <br>
+                        <a href="#"><button  class="book_btn"> Adquirir</button></a>
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room2.jpg" alt="#"/></figure>
+                        <figure><img src="images/pueblosimg/cuetzalan.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>Cuetzalan Puebla</h3>
+                        <p>4 dias/3 noches: disfruta de su colorido tianguis, una gran feria tradicional donde se practica el trueque entre las comunidades cercanas. Ahí puedes comprar hermosas artesanías, bordados o disfrutar de su gastronomía y exquisito café.</p>
+                        <a class="prueba" href="#">MXN $3,000 Por Personas</a>
+                        <br>
+                        <a style="color:blue; font-size:20px;">MXN $1,500 por pesona </a>
+                        <br>
+                        <a href="#"><button  class="book_btn"> Adquirir</button></a>
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room3.jpg" alt="#"/></figure>
+                        <figure><img src="images/pueblosimg/huachinango.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>Huauchinango Puebla</h3>
+                        <p>5 dias/4 noches: Piensa en un hermoso pueblo colonial rodeado de bellos cerros, aire puro y cascadas de agua cristalina. Si te gusto la idea, Huauchinango es un lugar que no debes dejar de visitar.
+
+                           El carnaval es un momento inmejorable para visitarlo, sus comparsas son un espectáculo imperdible.</p>
+                           <a class="prueba" href="#">MXN $3,800 Por Personas</a>
+                           <br>
+                           <a style="color:blue; font-size:20px;">MXN $1,100 por pesona </a>
+                           <br>
+                           <a href="#"><button  class="book_btn"> Adquirir</button></a>   
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room4.jpg" alt="#"/></figure>
+                        <figure><img src="images/pueblosimg/atlixco.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>Atlixco Puebla</h3>
+                        <p>3 dias/2 noches: Atlixco conserva una rica herencia arquitectónica que puede verse en su zócalo y sus templos.
+
+                           No puedes irte de Atlixco, llamada “la ciudad de las flores”, sin pasar a sus mercados y viveros.</p>
+                           <a class="prueba" href="#">MXN $1,300 Por Personas</a>
+                           <br>
+                           <a style="color:blue; font-size:20px;">MXN $800 por pesona </a>
+                           <br>
+                           <a href="#"><button  class="book_btn"> Adquirir</button></a>   
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room5.jpg" alt="#"/></figure>
+                        <figure><img src="images/pueblosimg/chignahuapan.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>chignahuapan Puebla</h3>
+                        <p>4 dias/3 noches: Este hermoso Pueblo Mágico está rodeado de una naturaleza deslumbrante. En los alrededores de Chignahuapan encontrarás montañas y ríos en un marco vegetal exuberante.</p>
+                        <a class="prueba" href="#">MXN $5,300 Por Personas</a>
+                        <br>
+                        <a style="color:blue; font-size:20px;">MXN $3,800 por pesona </a>
+                        <br>
+                        <a href="#"><button  class="book_btn"> Adquirir</button></a> 
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room6.jpg" alt="#"/></figure>
+                        <figure><img src="images/pueblosimg/cholula.jpg" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>Cholula</h3>
+                        <p>Este hermoso Pueblo Mágico está rodeado de una naturaleza deslumbrante. En los alrededores de Chignahuapan encontrarás montañas y ríos en un marco vegetal exuberante.</p>
+                        <a class="prueba" href="#">MXN $6,300 Por Personas</a>
+                        <br>
+                        <a style="color:blue; font-size:20px;">MXN $4,200 por pesona </a>
+                        <br>
+                        <a href="#"><button  class="book_btn"> Adquirir</button></a> 
                      </div>
                   </div>
                </div>
