--- a/index.html
+++ b/index.html
@@ -46,11 +46,8 @@
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-<<<<<<< HEAD
                               <a href="index.html"><img src="images/logo/logo1.png" alt="#" /></a>
-=======
-                              <a href="index.html"><img src="images/p1.png" alt="#" /></a>
->>>>>>> WeTerra
+                           
                            </div>
                         </div>
                      </div>
@@ -502,7 +499,6 @@
       </div>
       -->
       <!-- end blog -->
-<<<<<<< HEAD
       <!--  contact -->
       <div class="contact">
          <div class="container">
@@ -538,7 +534,7 @@
                <div class="col-md-6">
                   <div class="map_main">
                      <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d120689.24164574256!2d-98.26317775539032!3d19.040033933222265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc0bd5ebc7a3b%3A0x48a6461de494ad95!2sPuebla%2C%20Pue.!5e0!3m2!1ses-419!2smx!4v1645153728076!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d120689.24164574256!2d-98.26317775539032!3d19.040033933222265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc0bd5ebc7a3b%3A0x48a6461de494ad95!2sPuebla%2C%20Pue.!5e0!3m2!1ses-419!2smx!4v1645153728076!5m2!1ses-419!2smx" width="600" height="400" frameborder="0"  style="border:0; width: 100%;" allowfullscreen=""></iframe>
                      </div>
                   </div>
                </div>
@@ -546,9 +542,7 @@
          </div>
       </div>
       <!-- end contact -->
-=======
       
->>>>>>> WeTerra
       <!--  footer -->
       <footer>
          <div class="footer">
