--- a/contact.html
+++ b/contact.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <!-- basic -->
+      
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <!-- mobile metas -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-      <!-- site metas -->
-      <title>keto</title>
+      <!-- Nombre del Sitio -->
+      <title>Grand Tour</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
-      <!-- style css -->
+      <!-- estilos css -->
       <link rel="stylesheet" href="css/style.css">
-      <!-- Responsive-->
+      <!-- Parte Responsiva -->
       <link rel="stylesheet" href="css/responsive.css">
       <!-- fevicon -->
       <link rel="icon" href="images/fevicon.png" type="image/gif" />
-      <!-- Scrollbar Custom CSS -->
+      <!-- Personalizado de la barra de desplazamiento CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-      <!-- Tweaks for older IEs-->
+      <!-- Ajustes para IEs mas antiguos -->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+
    </head>
    <!-- body -->
    <body class="main-layout">
-      <!-- Messenger Plugin de chat Code -->
+      <!-- Código de chat del plugin de Messenger-->
     <div id="fb-root"></div>
 
-    <!-- Your Plugin de chat code -->
+    <!-- código de chat complemento -->
     <div id="fb-customer-chat" class="fb-customerchat">
     </div>
 
@@ -44,7 +42,7 @@
       chatbox.setAttribute("attribution", "biz_inbox");
     </script>
 
-    <!-- Your SDK code -->
+    <!-- Código SDK -->
     <script>
       window.fbAsyncInit = function() {
         FB.init({
@@ -65,7 +63,8 @@
       <div class="loader_bg">
          <div class="loader"><img src="images/loading.gif" alt="#"/></div>
       </div>
-      <!-- end loader -->
+      <!-- fin loader -->
+
       <!-- header -->
       <header>
          <!-- header inner -->
@@ -108,8 +107,8 @@
             </div>
          </div>
       </header>
-      <!-- end header inner -->
-      <!-- end header -->
+      <!-- fin header inner -->
+      <!-- fin header -->
      <div class="back_re">
          <div class="container">
             <div class="row">
@@ -121,7 +120,7 @@
             </div>
          </div>
       </div>
-      <!--  contact -->
+      <!--  Formulario Contactanos -->
       <div class="contact">
          <div class="container">
             <div class="row">
@@ -138,7 +137,7 @@
                            <input class="contactus" placeholder="Numero de Telefono" type="type" name="Numero de Telefono">                          
                         </div>
                         <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" type="type" Message="Name">Mensaje</textarea>
+                           <textarea class="textarea" placeholder="Mensaje" type="type" Message="Name" ></textarea>
                         </div>
                         <div class="col-md-12">
                            <button class="send_btn">Enviar</button>
@@ -156,8 +155,9 @@
             </div>
          </div>
       </div>
-      <!-- end contact -->
-      <!--  footer -->
+      <!--  fin Formulario Contactanos -->
+
+      <!--  footer contacto y menu -->
       <footer>
          <div class="footer">
             <div class="container">
@@ -194,22 +194,20 @@
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
                         <p>
-                           © 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a>
-                           <br><br>
-                           Distributed by Grand Tour</a>
-                           </p>
+                           <a>Distributed by Grand Tour</a>
+                        </p>
                      </div>
                   </div>
                </div>
             </div>
          </div>
       </footer>
-      <!-- end footer -->
-      <!-- Javascript files-->
+       <!-- fin footer contacto y menu -->
+      <!-- Javascript archivos-->
       <script src="js/jquery.min.js"></script>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/jquery-3.0.0.min.js"></script>
-      <!-- sidebar -->
+      <!-- barra lateral -->
       <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
       <script src="js/custom.js"></script>
    </body>
