--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
    <head>
       <!-- basic -->
       <meta charset="utf-8">
@@ -70,6 +70,12 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contactanos</a>
                               </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="session.html">Iniciar sessión</a>
+                               </li>
+                               <li class="nav-item">
+                                 <a class="nav-link" href="registrate.html">Registrarte</a>
+                               </li>
                            </ul>
                         </div>
                      </nav>
@@ -105,7 +111,7 @@
                </div>
                <div class="col-md-7">
                   <div class="about_img">
-                     <figure><img src="images/about.png" alt="#"/></figure>
+                     <figure><img src="images/logo/ch.jpeg" alt="#"/></figure>
                   </div>
                   <div class="subtitle mt-4">
                      <h3>Misión</h3>
@@ -160,11 +166,11 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
+                        
                         <p>
-                           © 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a>
-                           <br><br>
-                           Distributed by Grand Tour</a>
-                           </p>
+                        © 2022 All Rights Reserved.<a href=".">Grand Tour</a>
+                        </p>
+
                      </div>
                   </div>
                </div>
