--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
    <head>
       <!-- basic -->
       <meta charset="utf-8">
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>keto</title>
+      <title>Grand Tour</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -100,6 +100,12 @@
                               <li class="nav-item active">
                                  <a class="nav-link" href="contact.html">Contactanos</a>
                               </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="session.html">Iniciar sessión</a>
+                               </li>
+                               <li class="nav-item">
+                                 <a class="nav-link" href="registrate.html">Registrarte</a>
+                               </li>
                            </ul>
                         </div>
                      </nav>
@@ -193,14 +199,15 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
+                        
                         <p>
-                           © 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a>
-                           <br><br>
-                           Distributed by Grand Tour</a>
-                           </p>
+                        © 2022 All Rights Reserved.<a href=".">Grand Tour</a>
+                        </p>
+
                      </div>
                   </div>
                </div>
+            </div>
             </div>
          </div>
       </footer>
