--- a/room.html
+++ b/room.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
    <head>
       <!-- basic -->
       <meta charset="utf-8">
@@ -211,11 +211,11 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
+                        
                         <p>
-                           © 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a>
-                           <br><br>
-                           Distributed by Grand Tour</a>
-                           </p>
+                        © 2022 All Rights Reserved.<a href=".">Grand Tour</a>
+                        </p>
+
                      </div>
                   </div>
                </div>
