--- a/Nosotros.html
+++ b/Nosotros.html
@@ -62,10 +62,10 @@
                                  <a class="nav-link" href="index.html">Inicio</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="about.html">Nosotros</a>
+                                 <a class="nav-link" href="Nosotros.html">Nosotros</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="room.html">Ofertas</a>
+                                 <a class="nav-link" href="ofertas.html">Ofertas</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contactanos</a>
@@ -139,8 +139,8 @@
                      <h3>Menu</h3>
                      <ul class="link_menu">
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="about.html">Nosotros</a></li>
-                        <li><a href="room.html">Ofertas</a></li>
+                        <li><a href="Nosotros.html">Nosotros</a></li>
+                        <li><a href="ofertas.html">Ofertas</a></li>
                         <li class="active"><a href="contact.html">Contactanos</a></li>
                      </ul>
                   </div>
