--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+      <!-- My styles-->
+      <link href="css/mystyle.css" rel="stylesheet">
+
       <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -178,6 +181,22 @@
       </div> -->
       <!-- end about -->
       <!-- our_room -->
+
+
+      <!-- search-->
+      <div class="our_room">
+          <div class="container h-100">
+              <div class="d-flex justify-content-center h-100">
+                  <div class="search "> 
+                     <input class="search_input" type="text" name="" placeholder="Busca un viaje aquí . . ."> 
+                     <a href="#" class="search_icon">
+                        <i class="fa fa-search"></i>
+                     </a> 
+                  </div>
+              </div>
+          </div>
+      </div>
+      <!-- end search-->
       
       <div  class="our_room">
          <div class="container">
