agregando icnono de la pagina

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
       <!-- My styles-->
       <link href="css/mystyle.css" rel="stylesheet">
+      <link rel="icon" href="images\logo\Grand-Tour_icono.ico">
 
 
    </head>
